--- a/index.html
+++ b/index.html
@@ -9,4 +9,6 @@
     <h1>Welcome to My Page</h1>
     <p>This is a simple HTML document.</p>
 </body>
+<script>
+    console.log("Hello, World!");
 </html>
